--- a/Clock.html
+++ b/Clock.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
 
 <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
 
-
+ <style>
 body {
     background: black;
 }
@@ -18,6 +20,10 @@ body {
    
 }
 
+  </style>
+
+     <script>
+         
 function showTime(){
     var date = new Date();
     var h = date.getHours(); // 0 - 23
@@ -47,3 +53,8 @@ function showTime(){
 }
 
 showTime();
+
+       </script>
+
+    </body>
+</html>
