--- a/stopwatch.html
+++ b/stopwatch.html
@@ -1,4 +1,48 @@
-window.onload = function () {
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        
+body {
+background:black;
+font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+height:100%;
+}
+
+.wrapper {
+width: 800px;
+margin: 30px auto;
+color:white;
+text-align:center;
+}
+
+h1, h2, h3 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-size: 2.6em;
+  text-transform: uppercase;
+}
+
+#seconds, #tens{
+  font-size:2em;
+}
+
+button{
+background:orange;
+color:white;
+border: solid 1px white;
+text-decoration:none;
+cursor:pointer;
+font-size:1.2em;
+padding:18px 10px;
+width:180px;
+margin: 10px;
+ outline: none;
+  
+}
+    </style>
+    <script>
+        window.onload = function () {
   
   var seconds = 00; 
   var tens = 00; 
@@ -58,3 +102,18 @@ window.onload = function () {
   
 
 }
+    </script>
+
+</head>
+<body>
+    <div class="wrapper">
+        <h1>Stopwatch</h1>
+        <h2>Vanilla JavaScript Stopwatch</h2>
+        <p><span id="seconds">00</span>:<span id="tens">00</span></p>
+        <button id="button-start">Start</button>
+        <button id="button-stop">Stop</button>
+        <button id="button-reset">Reset</button>
+        </div> 
+
+</body>
+</html>
