Update and rename Toggle Navigation Menu to ToggleNavigationMenu.html

--- a/ToggleNavigationMenu.html
+++ b/ToggleNavigationMenu.html
@@ -63,18 +63,18 @@
 
 		<!-- Logo and navigation menu -->
 		<div class="geeks">
-			<a href="#" class="">GeeksforGeeks</a>
+			<a href="#" class="">Md Umar</a>
 			<div id="menus">
-				<a href="#">Language</a>
-				<a href="#">Practice</a>
-				<a href="#">Interview</a>
-				<a href="#">Puzzle</a>
+				<a href="#">About</a>
+				<a href="#">Skills</a>
+				<a href="#">Certificates</a>
+				<a href="#">Report</a>
 
 			</div>
 
 			<!-- Bar icon for navigation -->
 			<a href="javascript:void(0);" class="icon"
-					onclick="geeksforgeeks()">
+					onclick="Md UMar()">
 
 				<i onclick="myFunction(this)"
 						class="fa fa-plus-circle">
@@ -86,7 +86,7 @@
 	<script>
 		
 		// Function to toggle the bar
-		function geeksforgeeks() {
+		function Umar() {
 			var x = document.getElementById("menus");
 			if (x.style.display === "block") {
 				x.style.display = "none";
