--- a/ToggleNavigationMenu.html
+++ b/ToggleNavigationMenu.html
@@ -16,7 +16,7 @@
 			margin: auto;
 			height: 500px;
 			color: white;
-			background-color: green;
+			background-color: black;
 			border-radius: 10px;
 		}
 		
