--- a/ScientificCalculator.html
+++ b/ScientificCalculator.html
@@ -30,7 +30,7 @@
 		}
 		
 		input[type="button"] { 
-			background-color:green; 
+			background-color:lightblue; 
 			color: black; 
 			border: solid black 2px; 
 			width:100% 
