Update and rename BMI Convertor to BMI_Convertor.html

--- a/BMI_Convertor.html
+++ b/BMI_Convertor.html
@@ -40,7 +40,7 @@ input:focus {
 }
 
 form {
-    background-color:aqua;
+    background-color:lightpink;
     padding: 20px;
     color: #000;
     box-shadow: white;
