Update and rename Mortgage Calculator to MortgageCalculator.html

--- a/MortgageCalculator.html
+++ b/MortgageCalculator.html
@@ -4,7 +4,7 @@
     <style> #loancal {
         width: 375px;
         height: 295px;
-        background-color:rgb(107, 184, 220);
+        background-color:lightpink;
         color: #fff;
         margin-left: 275px;
         margin-top: 95px;
