--- a/RockPaperScissorGame.html
+++ b/RockPaperScissorGame.html
@@ -7,6 +7,7 @@
     <style>
         body{
             display: flex;
+            background: lightpink;
             flex-direction: column;
             justify-content: center;
             align-items: center;
