--- a/GuessNumberGame.html
+++ b/GuessNumberGame.html
@@ -1,102 +1,71 @@
-//Generate a random number between 1 and 500
-let randomNumber = parseInt((Math.random()*100)+1);
-const submit = document.querySelector('#subt');
-const userInput = document.querySelector('#guessField');
-const guessSlot = document.querySelector('.guesses');
-const remaining = document.querySelector('.lastResult');
-const startOver = document.querySelector('.resultParas');
-const lowOrHi = document.querySelector('.lowOrHi');
-const p = document.createElement('p');
-let previousGuesses = [];
-let numGuesses = 1;
-let playGame = true;
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Number Guessing Game</title>
 
-if (playGame){
-    subt.addEventListener('click', function(e){
-        e.preventDefault();
-        //Grab guess from user
-        const guess = parseInt(userInput.value);
-        validateGuess(guess);
-    });
-}
+	<style>
+	html {
+		font-family: sans-serif;
+	}
+	
+	body {
+		width: 50%;
+		max-width: 800px;
+		min-width: 480px;
+		margin: 0 auto;
+	}
+	</style>
+</head>
 
-function validateGuess(guess){
-    if (isNaN(guess)){
-        alert('Please enter a valid number');
-    } else if (guess < 1) {
-        alert('Please enter a number greater than 1!');
-    } else if (guess > 100){
-        alert('Please enter a number less than 500!')
-    } else {
-        //Keep record of number of attempted guesses
-        previousGuesses.push(guess);
-        //Check to see if game is over
-        if (numGuesses === 11){
-            displayGuesses(guess);
-            displayMessage(`Game Over! Number was ${randomNumber}`);
-            endGame();
-        } else {
-        //Display previous guessed numbers
-        displayGuesses(guess);
-        //Check guess and display if wrong
-        checkGuess(guess);
-        }
-    }
-}
+<body>
+	<h1>Guess The Number</h1>
+	<p>
+		We have selected a random number between 1 - 10.
+			See if you can guess it.
+	</p>
 
-function checkGuess(guess){
-    //Display clue if guess is too high or too low
-    if (guess === randomNumber){
-        displayMessage(`You guessed correctly!`);
-        endGame();
-    } else if (guess < randomNumber) {
-        displayMessage(`Too low! Try again!`);
-    } else if (guess > randomNumber) {
-        displayMessage(`Too High! Try again!`);
-    }
-}
+	<div class="form">
+		<label for="guessField">Enter a guess: </label>
+		<input type = "text"
+				id = "guessField"
+			class = "guessField">
+		<input type = "submit"
+			value = "Submit guess"
+			class = "guessSubmit"
+			id = "submitguess">
+	</div>
 
-function displayGuesses(guess){
-    userInput.value = '';
-    guessSlot.innerHTML += `${guess}  `;
-    numGuesses++
-    remaining.innerHTML = `${11 - numGuesses}  `;
-}
+	<script type = "text/javascript">
 
-function displayMessage(message){
-        lowOrHi.innerHTML = `<h1>${message}</h1>`
-}
+	// random value generated
+	var y = Math.floor(Math.random() * 10 + 1);
 
-function endGame(){
-    //Clear user input
-    userInput.value = '';
-    //Disable user input button
-    userInput.setAttribute('disabled', '');
-    //Display Start new Game Button
-          p.classList.add('button');
-          p.innerHTML = `<h1 id="newGame">Start New Game</h1>`
-    startOver.appendChild(p);
-    playGame = false;
-    newGame();
-}
+	// counting the number of guesses
+	// made for correct Guess
+	var guess = 1;
 
-function newGame(){
-    const newGameButton = document.querySelector('#newGame');
-    newGameButton.addEventListener('click', function(){
-        //Pick a new random number
-        randomNumber = parseInt((Math.random()*100)+1);
-        previousGuesses = [];
-        numGuesses = 1;
-        guessSlot.innerHTML = '';
-        lowOrHi.innerHTML = '';
-        remaining.innerHTML = `${11 - numGuesses}  `;
-        userInput.removeAttribute('disabled');
-        startOver.removeChild(p);
-        playGame = true;
-    })
-}
-//Allow to restart game with restart button
-//Change DIV to a form so it can accept the enter key
+	document.getElementById("submitguess").onclick = function(){
 
-//NOTES:
-//NaN != NaN
+		// number guessed by user	
+		var x = document.getElementById("guessField").value;
+
+		if(x == y)
+		{	
+			alert("CONGRATULATIONS!!! YOU GUESSED IT RIGHT IN "
+				+ guess + " GUESS ");
+		}
+		else if(x > y) /* if guessed number is greater than actual number*/
+		{	
+			guess++;
+			alert("OOPS SORRY!! TRY A SMALLER NUMBER");
+		}
+		else
+		{
+			guess++;
+			alert("OOPS SORRY!! TRY A GREATER NUMBER")
+		}
+	}
+	</script>
+</body>
+</html>					
